--- a/index.htm
+++ b/index.htm
@@ -163,6 +163,20 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">November 2025</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Zhaoxia, Jingyi, Bhummanat, Mengxue, and Shengyuan each gives an oral presentations, and Grant presents a poster at the Commonwealth of Virginia Cancer Research Conference (CVCRC) in Richmond. Great job, everyone!
+		<br><br>
+		Hongpan gives a poster presentation at Cold Spring Harbor Meeting on Single Cell Analyses.
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">September 2025</font>
 		</p>
 	</div>
@@ -1261,7 +1275,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: September 14, 2025</p>
+<p align="right">Last modified: November 16, 2025</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
