--- a/index.htm
+++ b/index.htm
@@ -177,6 +177,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">October 2025</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Hongpan won a Best Flash Talk Award at the annual BMG retreat. Congratulations!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">September 2025</font>
 		</p>
 	</div>
