--- a/publication.htm
+++ b/publication.htm
@@ -164,6 +164,16 @@ Vinay Singh Tanwar*, Vajir Malek*, <u>Jingyi Wang</u>*, Yingjun Luo, Naseeb Kaur
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.sciencedirect.com/science/article/pii/S2950328025001219" target="_blank">The LMO2-LDB1-TAL1 complex regulates transcription networks in Acute Myeloid Leukemia</a><br>
+Nicholas Dunham*, <u>Zhenjia Wang</u>*, Yaseswini Neelamraju, Yan Guo, B. Bishal Paudel, Cem Meydan, Jorge A. Gandara, Fady Abdelmalak, Hao Fan, Joyce Hardwick, Justin H. Layer, Tak Lee, Bernhard Maier, W. Hayes McDonald, Isaani Patnaik, Subhash Prajapati, Franck Rapaport, Caroline Sheridan, Gloria Sheynkman, Paul Zumbo, Michael W. Becker, Lars Bullinger, Martin P. Carroll, Richard J. D’Andrea, Richard Dillon, Ross L. Levine, Christopher E. Mason, Ari M. Melnick, Donna S. Neuberg, Stefan Bekiranov<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>, Utpal P. Dave<sup>#</sup>, Francine E. Garrett-Bakelman<sup>#</sup>
+<br>
+<i><b>Blood Neoplasia</b></i>, 100186 (2025)
+</p></li>
+<li><p><a href="https://doi.org/10.3390/cancers17193148" target="_blank">Transcriptional condensates: epigenetic reprogramming and therapeutic targets in hematologic malignancies</a><br>
+<u>Kevin Qiu</u>, Qing Yin, <u>Chongzhi Zang</u>, Jianguo Tao
+<br>
+<i><b>Cancers</b></i> 17, 3148 (2025)
+</p></li>
 <li><p><a href="https://www.science.org/doi/10.1126/sciimmunol.adq8970" target="_blank">Single-cell multiomics identifies Tcf1 and Lef1 as key initiators of early thymic progenitor fate</a><br>
 Xin Zhao*, <u>Shengen Shawn Hu</u>*, Wen-Han Lee, Johannes L. Zakrzewski, Qing-Sheng Mi, Rachel K. Rosenstein, <u>Chongzhi Zang</u><sup>#</sup>, Xiaoke Ma<sup>#</sup>, Hai-Hui Xue<sup>#</sup>
 <br>
@@ -399,7 +409,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="49">
+<ol style="padding-left: 24px; line-height: 1.6;" start="51">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -519,7 +529,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: September 14, 2025</p>
+<p align="right">Last modified: November 30, 2025</p>
 </div>
 
 <script>
