--- a/publication.htm
+++ b/publication.htm
@@ -155,19 +155,20 @@ Jindayi Liang*, Yiran Wang*, Justin Demmerle, Britney Jiayu He, Christopher J. R
 <b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2025.05.02.651992" target="_blank">https://doi.org/10.1101/2025.05.02.651992</a> (2025)
 </p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2025.04.14.648851" target="_blank">Single-cell multimodal profiling highlights persistent aortic smooth muscle cell changes in diabetic mice despite glycemic control</a><br>
-Vinay Singh Tanwar*, Vajir Malek*, <u>Jingyi Wang</u>*, Yingjun Luo, Naseeb Kaur Malhi, Hongpan Zhang, Maryam Abdollahi, Linda Lanting, Parijat Senapati, Sadhan Das, Marpadga A Reddy, <u>Chongzhi Zang</u>, Clint L. Miller<sup>#</sup>, Zhen Bouman Chen<sup>#</sup>, Rama Natarajan<sup>#</sup>
+Vinay Singh Tanwar*, Vajir Malek*, <u>Jingyi Wang</u>*, Yingjun Luo, Naseeb Kaur Malhi, <u>Hongpan Zhang</u>, Maryam Abdollahi, Linda Lanting, Parijat Senapati, Sadhan Das, Marpadga A Reddy, <u>Chongzhi Zang</u>, Clint L. Miller<sup>#</sup>, Zhen Bouman Chen<sup>#</sup>, Rama Natarajan<sup>#</sup>
 <br>
-<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2025.04.14.648851" target="_blank">https://doi.org/10.1101/2025.04.14.648851</a> (2025)
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2025.04.14.648851" target="_blank">https://doi.org/10.1101/2025.04.14.648851</a> (2025)<br>
+Accepted to <i><b>Arteriosclerosis, Thrombosis, and Vascular Biology (ATVB)</i></b> (2026)
 </p></li>
 </ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
-<li><p><a href="https://www.sciencedirect.com/science/article/pii/S2950328025001219" target="_blank">The LMO2-LDB1-TAL1 complex regulates transcription networks in Acute Myeloid Leukemia</a><br>
-Nicholas Dunham*, <u>Zhenjia Wang</u>*, Yaseswini Neelamraju, Yan Guo, B. Bishal Paudel, Cem Meydan, Jorge A. Gandara, Fady Abdelmalak, Hao Fan, Joyce Hardwick, Justin H. Layer, Tak Lee, Bernhard Maier, W. Hayes McDonald, Isaani Patnaik, Subhash Prajapati, Franck Rapaport, Caroline Sheridan, Gloria Sheynkman, Paul Zumbo, Michael W. Becker, Lars Bullinger, Martin P. Carroll, Richard J. D’Andrea, Richard Dillon, Ross L. Levine, Christopher E. Mason, Ari M. Melnick, Donna S. Neuberg, Stefan Bekiranov<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>, Utpal P. Dave<sup>#</sup>, Francine E. Garrett-Bakelman<sup>#</sup>
+<li><p><a href="https://www.sciencedirect.com/science/article/pii/S2950328025001219" target="_blank">The LMO2-LDB1-TAL1 complex regulates transcription networks in acute myeloid leukemia</a><br>
+Nicholas Dunham*, <u>Zhenjia Wang</u>*, Yaseswini Neelamraju, Yan Guo, B. Bishal Paudel, Cem Meydan, Jorge A. Gandara, Fady Abdelmalak, Hao Fan, Joyce Hardwick, Justin H. Layer, Tak Lee, Bernhard Maier, W. Hayes McDonald, Isaani Patnaik, Subhash Prajapati, Franck Rapaport, Caroline Sheridan, Gloria Sheynkman, Paul Zumbo, Michael W. Becker, Lars Bullinger, Martin P. Carroll, Richard J. D’Andrea, Richard Dillon, Ross L. Levine, Christopher E. Mason, Ari M. Melnick, Donna S. Neuberg, Stefan Bekiranov, <u>Chongzhi Zang</u><sup>#</sup>, Utpal P. Davé<sup>#</sup>, Francine E. Garrett-Bakelman<sup>#</sup>
 <br>
-<i><b>Blood Neoplasia</b></i>, 100186 (2025)
+<i><b>Blood Neoplasia</b></i> 3, 100186 (2026)
 </p></li>
 <li><p><a href="https://doi.org/10.3390/cancers17193148" target="_blank">Transcriptional condensates: epigenetic reprogramming and therapeutic targets in hematologic malignancies</a><br>
 <u>Kevin Qiu</u>, Qing Yin, <u>Chongzhi Zang</u>, Jianguo Tao
@@ -529,7 +530,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: November 30, 2025</p>
+<p align="right">Last modified: January 22, 2026</p>
 </div>
 
 <script>
