--- a/index.htm
+++ b/index.htm
@@ -163,6 +163,30 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">February 2026</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Jingyi receives a Trainee Travel Award from the UVA Comprehensive Cancer Center, for her upcoming oral presentation at the Gordon Research Seminar on Single-Cell Genomics. Congratulations!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
+		<font color="#002F6C">January 2026</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Jingyi's collaboration paper with the Clint Miller lab is accepted to <i><b>Arteriosclerosis, Thrombosis, and Vascular Biology (ATVB)</b></i>!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">November 2025</font>
 		</p>
 	</div>
@@ -182,7 +206,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Hongpan won a Best Flash Talk Award at the annual BMG retreat. Congratulations!
+		Hongpan wins a Best Flash Talk Award at the annual BMG retreat. Congratulations!
 		</p>
 	</div>
 </div>
@@ -552,6 +576,10 @@ function myFunction() {
 		</p>
 	</div>
 </div>
+<button type="button" class="collapsible">
+<h4><font color="#002F6C">Earlier News (Click to Expand)</font></h4>
+</button>
+<div class="content">
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
@@ -686,10 +714,6 @@ function myFunction() {
 		</p>
 	</div>
 </div>
-<button type="button" class="collapsible">
-<h4><font color="#002F6C">Earlier News (Click to Expand)</font></h4>
-</button>
-<div class="content">
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
@@ -1287,7 +1311,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: November 16, 2025</p>
+<p align="right">Last modified: February 6, 2026</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
