--- a/people.htm
+++ b/people.htm
@@ -153,6 +153,9 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
+      <img src="images/20260217.jpg">
+    </li>
+    <li>
       <img src="images/20250815.jpg">
     </li>
     <li>
@@ -315,14 +318,14 @@ Jingyi Wang is a PhD student in the Biomedical Sciences (BIMS) program. She comp
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Bhummanat Sittipongpittaya is a PhD student in the Biomedical Sciences (BIMS) program. He received his M.S. in Biomedical Engineering from Case Western Reserve University in 2024. He is interested in bioinformatics tools development and computational approaches to address biological questions.
 </p><br><br><br>
-<!--<p style="line-height: 1.6;">
+<p style="line-height: 1.6;">
 <img align="right" src="images/danielle_hughes.jpg" style="width:150px">
 <b>Danielle Hughes</b>
 <a href="mailto:twm7bu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Danielle Hughes is a PhD student in the Biomedical Sciences (BIMS) program completing a rotation in the lab. Originally from Prattville, AL, she earned her undergraduate degree from the University of Tennessee, Knoxville in 2022 and her master’s degree from Johns Hopkins University in 2025. Danielle is interested in studying biomolecular condensates. In her free time, she enjoys hiking, baking, thrifting, foraging for wild mushrooms, watching Halloween movies, reading classic literature, and visiting animal shelters. 
+Danielle Hughes is a PhD student in the Biomedical Sciences (BIMS) program, co-mentored by Dr. Zang. Originally from Prattville, AL, she earned her undergraduate degree from the University of Tennessee, Knoxville in 2022 and her master’s degree from Johns Hopkins University in 2025. Danielle is interested in studying biomolecular condensates. In her free time, she enjoys hiking, baking, thrifting, foraging for wild mushrooms, watching Halloween movies, reading classic literature, and visiting animal shelters. 
 </p><br><br><br>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/sophie_okeefe.jpg" style="width:180px">
 <b>Sophie O'Keefe</b>
 <a href="mailto:ugp9ke@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
@@ -703,7 +706,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: November 14, 2025</p>
+<p align="right">Last modified: February 18, 2026</p>
 
 </div>
 
