--- a/index.htm
+++ b/index.htm
@@ -169,18 +169,8 @@ function myFunction() {
 	<div class="column right">
 		<p>
 		Jingyi receives a Trainee Travel Award from the UVA Comprehensive Cancer Center, for her upcoming oral presentation at the Gordon Research Seminar on Single-Cell Genomics. Congratulations!
-		</p>
-	</div>
-</div>
-<div class="row" style="line-height: 1.6;">
-	<div class="column left">
-		<p>
-		<font color="#002F6C">January 2026</font>
-		</p>
-	</div>
-	<div class="column right">
-		<p>
-		Jingyi's collaboration paper with the Clint Miller lab is accepted to <i><b>Arteriosclerosis, Thrombosis, and Vascular Biology (ATVB)</b></i>!
+		<br><br>
+		Jingyi's collaboration paper with the Clint Miller lab is published in <a href="https://www.ahajournals.org/doi/10.1161/ATVBAHA.125.324012" target="_blank"><i><b>Arteriosclerosis, Thrombosis, and Vascular Biology</b></i></a>. Congratulations!
 		</p>
 	</div>
 </div>
