--- a/publication.htm
+++ b/publication.htm
@@ -154,17 +154,16 @@ Jindayi Liang*, Yiran Wang*, Justin Demmerle, Britney Jiayu He, Christopher J. R
 <br>
 <b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2025.05.02.651992" target="_blank">https://doi.org/10.1101/2025.05.02.651992</a> (2025)
 </p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2025.04.14.648851" target="_blank">Single-cell multimodal profiling highlights persistent aortic smooth muscle cell changes in diabetic mice despite glycemic control</a><br>
-Vinay Singh Tanwar*, Vajir Malek*, <u>Jingyi Wang</u>*, Yingjun Luo, Naseeb Kaur Malhi, <u>Hongpan Zhang</u>, Maryam Abdollahi, Linda Lanting, Parijat Senapati, Sadhan Das, Marpadga A Reddy, <u>Chongzhi Zang</u>, Clint L. Miller<sup>#</sup>, Zhen Bouman Chen<sup>#</sup>, Rama Natarajan<sup>#</sup>
-<br>
-<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2025.04.14.648851" target="_blank">https://doi.org/10.1101/2025.04.14.648851</a> (2025)<br>
-Accepted to <i><b>Arteriosclerosis, Thrombosis, and Vascular Biology (ATVB)</i></b> (2026)
-</p></li>
 </ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.ahajournals.org/doi/10.1161/ATVBAHA.125.324012" target="_blank">Single-cell multimodal profiling highlights persistent aortic smooth muscle cell changes in diabetic mice despite glycemic control</a><br>
+Vinay Singh Tanwar*, Vajir Malek*, <u>Jingyi Wang</u>*, Yingjun Luo, Naseeb Kaur Malhi, <u>Hongpan Zhang</u>, Maryam Abdollahi, Linda Lanting, Parijat Senapati, Sadhan Das, Marpadga A. Reddy, <u>Chongzhi Zang</u>, Clint L. Miller<sup>#</sup>, Zhen Bouman Chen<sup>#</sup>, Rama Natarajan<sup>#</sup>
+<br>
+<i><b>Arteriosclerosis, Thrombosis, and Vascular Biology</i></b>, doi: <a href="https://doi.org/10.1161/ATVBAHA.125.324012" target="_blank">https://doi.org/10.1161/ATVBAHA.125.324012</a> (2026)
+</p></li>
 <li><p><a href="https://www.sciencedirect.com/science/article/pii/S2950328025001219" target="_blank">The LMO2-LDB1-TAL1 complex regulates transcription networks in acute myeloid leukemia</a><br>
 Nicholas Dunham*, <u>Zhenjia Wang</u>*, Yaseswini Neelamraju, Yan Guo, B. Bishal Paudel, Cem Meydan, Jorge A. Gandara, Fady Abdelmalak, Hao Fan, Joyce Hardwick, Justin H. Layer, Tak Lee, Bernhard Maier, W. Hayes McDonald, Isaani Patnaik, Subhash Prajapati, Franck Rapaport, Caroline Sheridan, Gloria Sheynkman, Paul Zumbo, Michael W. Becker, Lars Bullinger, Martin P. Carroll, Richard J. D’Andrea, Richard Dillon, Ross L. Levine, Christopher E. Mason, Ari M. Melnick, Donna S. Neuberg, Stefan Bekiranov, <u>Chongzhi Zang</u><sup>#</sup>, Utpal P. Davé<sup>#</sup>, Francine E. Garrett-Bakelman<sup>#</sup>
 <br>
@@ -410,7 +409,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="51">
+<ol style="padding-left: 24px; line-height: 1.6;" start="52">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -530,7 +529,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: January 22, 2026</p>
+<p align="right">Last modified: February 18, 2026</p>
 </div>
 
 <script>
