--- a/publication.htm
+++ b/publication.htm
@@ -139,6 +139,11 @@ function myFunction() {
 <h3><font color="#002F6C">Recent Preprints</font></h3>
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.biorxiv.org/content/10.64898/2026.02.19.706897" target="_blank">Differential analysis of image-based chromatin tracing data with Dory</a><br>
+<u>Zhaoxia Ma</u>, Miao Liu, <u>Shengyuan Wang</u>, Siyuan Wang,  <u>Chongzhi Zang</u>
+<br>
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.64898/2026.02.19.706897" target="_blank">https://doi.org/10.64898/2026.02.19.706897</a> (2026)
+</p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2025.09.02.673784" target="_blank">PATTY corrects open chromatin bias for improved bulk and single-cell CUT&Tag profiling</a><br>
 <u>Shengen Shawn Hu</u>, Zhangli Su, Lin Liu, <u>Qingying Chen</u>, <u>Megan C. Grieco</u>, <u>Mengxue Tian</u>, Anindya Dutta,  <u>Chongzhi Zang</u>
 <br>
@@ -529,7 +534,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: February 18, 2026</p>
+<p align="right">Last modified: February 20, 2026</p>
 </div>
 
 <script>
