--- a/software.htm
+++ b/software.htm
@@ -143,6 +143,16 @@ ul.topnav li.icon {display: none;}
 </tr>
 </table>
 <hr>
+<h3><font color="#002F6C">Image-based chromatin profile analysis</font></h3>
+<table style="width:100%; line-height: 1.6;">
+<tr>
+<td style="width:120px; height:120px"><a href="https://github.com/zang-lab/Dory" target="_blank"><img src="images/dory_logo.png" style="width:100px"></a></td>
+<td><p>
+<b><a href="https://github.com/zang-lab/Dory" target="_blank">DORY</a></b> (<u>D</u>ifferential chr<u>o</u>matin t<u>r</u>acing anal<u>y</u>sis), a computational method for identifying differential chromatin region pairs from image-based chromatin tracing data. [<a href="https://github.com/zang-lab/Dory" target="_blank">Package (Beta)</a>] [<a href="https://www.biorxiv.org/content/10.64898/2026.02.19.706897" target="_blank">Preprint</a>]
+</p></td>
+</tr>
+</table>
+<hr>
 <h3><font color="#002F6C">ChIP-seq signal detection</font></h3>
 <table style="width:100%; line-height: 1.6;">
 <tr>
@@ -172,7 +182,7 @@ ul.topnav li.icon {display: none;}
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: September 7, 2025</p>
+<p align="right">Last modified: February 20, 2026</p>
 </div>
 
 </body></html>
