--- a/software.htm
+++ b/software.htm
@@ -102,9 +102,9 @@ ul.topnav li.icon {display: none;}
 </p></td>
 </tr>
 <tr>
-<td style="width:120px; height:120px"><a href="https://github.com/hongpan-uva/BARTsc" target="_blank"><img src="images/bartsc_logo.png" style="width:100px"></a></td>
+<td style="width:120px; height:120px"><a href="https://github.com/zang-lab/BARTsc" target="_blank"><img src="images/bartsc_logo.png" style="width:100px"></a></td>
 <td><p>
-<b><a href="https://github.com/hongpan-uva/BARTsc" target="_blank">BARTsc</a></b> (<u>BART</u> for <u>s</u>ingle <u>c</u>ell data), a bioinformatics tool for inferring transcriptional regulators (TRs, including transcription factors and chromatin regulators) that are specifically active for each cell cluster from single-cell omics data, including scRNA-seq, scATAC-seq, and single-cell multiome (ATAC+RNA) profiles. [<a href="https://github.com/hongpan-uva/BARTsc" target="_blank">Package (beta)</a>] [<a href="https://aacrjournals.org/cancerres/article/84/6_Supplement/2342/739601" target="_blank">Abstract</a>]
+<b><a href="https://github.com/zang-lab/BARTsc" target="_blank">BARTsc</a></b> (<u>BART</u> for <u>s</u>ingle <u>c</u>ell data), a bioinformatics tool for inferring transcriptional regulators (TRs, including transcription factors and chromatin regulators) that are specifically active for each cell cluster from single-cell omics data, including scRNA-seq, scATAC-seq, and single-cell multiome (ATAC+RNA) profiles. [<a href="https://github.com/zang-lab/BARTsc" target="_blank">Package (beta)</a>] [<a href="https://aacrjournals.org/cancerres/article/84/6_Supplement/2342/739601" target="_blank">Abstract</a>]
 </p></td>
 </tr>
 <tr>
